# freediving-recovery-analysis

./: .gitignore  LICENSE  README.md  dvc.yaml  params.yaml  paths.py  pyproject.toml  requirements.txt  setup.py  validate_09.py
.dvc/: config
.github/workflows/: ci.yml  regression.yml
analysis/: analyze_mean_rr.py  cc.py  ers_test.py  tt.py  validate_ers_final.py
analysis/validation_output/: features_tolerance_1s.csv  features_tolerance_2s.csv  features_tolerance_3s.csv  tolerance_validation_report.txt
analysis/validation_reports/: ers_final_validation_20251005_225423.json  ers_final_validation_20251005_231232.json  ers_final_validation_20251008_174257.json
apple_health_export/: export.xml.dvc
archive/: 03_augmentation.py  validate_augmentation.py
converted/: apnea_events_ci_20250904.csv
docs/: make.bat
docs/source/: conf.py  index.rst
hrr_analysis/: 01_cleaning.py  02_features.py  04_models.py  05_explainability.py  06_predict.py  07_visualize.py  08_report.py  augmentation_03.py  cleaning_01.py  config.py  explainability_05.py  features_02.py  models_04.py  predict_06.py  report_08.py  visualize_07.py
notebooks/: Model_Diagnostics.ipynb
scripts/: check_feature_isolation.py  check_quality_gate.py  compare_regression_baseline.py  curve.py  data_quality_check.py  integration_test.py  regression_test.py
tests/: test_score_utils.py
tests/baselines/: baseline_card_A.json  baseline_card_B.json
tests/data/: sample_export.xml
utils/: data_loader.py  mi.py  score_utils.py
